--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="secondary_light">#88ffff</color>
     <color name="secondary_dark">#009faf</color>
     <color name="main_text">#000000</color>
+    <color name="secondary_text">#616161</color>
+    <color name="error">#ff1744</color>
 </resources>
