--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="24dp"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -11,11 +12,23 @@
         android:layout_height="96dp"
         android:layout_margin="16dp"
         android:scaleType="fitCenter"
-        android:tint="@color/main"
-        android:src="@drawable/ic_baseline_account_circle_24" />
+        tools:src="@drawable/ic_baseline_account_circle_24" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/user_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:ellipsize="end"
+        android:lines="1"
+        android:singleLine="true"
+        android:textColor="@color/main_text"
+        android:textSize="18dp"
+        tools:text="viacheslavtitov90@gmail.com" />
 
     <View
         android:layout_width="match_parent"
-        android:background="@color/main_dark"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/main_dark" />
 </androidx.appcompat.widget.LinearLayoutCompat>
