--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
+            android:iconTint="@color/main"
             android:title="Settings" />
-        <item
-            android:id="@+id/nav_log_out"
-            android:icon="@drawable/ic_baseline_logout_24"
-            android:title="Log out" />
     </group>
 </menu>
