added languages and creating dictionaries

--- a/app/src/main/res/navigation/nav_main_graph.xml
+++ b/app/src/main/res/navigation/nav_main_graph.xml
@@ -7,7 +7,30 @@
 
     <fragment
         android:id="@+id/simpleFragment"
-        tools:layout="@layout/fragment_simple"
         android:name="my.dictionary.free.view.SimplerFragment"
-        android:label=""/>
+        android:label=""
+        tools:layout="@layout/fragment_simple" />
+
+    <fragment
+        android:id="@+id/userDictionaryFragment"
+        android:name="my.dictionary.free.view.user.dictionary.UserDictionaryFragment"
+        android:label="@string/my_dictionaries"
+        tools:layout="@layout/fragment_user_dictionary" />
+
+    <fragment
+        android:id="@+id/addUserDictionaryFragment"
+        android:name="my.dictionary.free.view.user.dictionary.add.AddUserDictionaryFragment"
+        android:label="@string/add_dictionary"
+        tools:layout="@layout/fragment_add_new_dictionary" />
+
+    <fragment
+        android:id="@+id/languagesFragment"
+        android:name="my.dictionary.free.view.user.dictionary.add.languages.LanguagesFragment"
+        android:label="@string/add_language"
+        tools:layout="@layout/fragment_languages" >
+        <argument
+            android:name="my.dictionary.free.view.user.dictionary.add.languages.LanguagesFragment.BUNDLE_LANGUAGE_TYPE_KEY"
+            android:defaultValue="0"
+            app:argType="integer" />
+    </fragment>
 </navigation>
