--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,11 @@
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
             android:iconTint="@color/main"
-            android:title="Settings" />
+            android:title="@string/settings" />
+        <item
+            android:id="@+id/nav_user_dictionary"
+            android:icon="@drawable/ic_dictionary"
+            android:iconTint="@color/main"
+            android:title="@string/my_dictionaries" />
     </group>
 </menu>
