--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_200">#EEEEEE</color>
+    <color name="gray_500">#607D8B</color>
+    <color name="light_blue_200">#81D4FA</color>
 
     <color name="main">#2196f3</color>
     <color name="main_light">#6ec5ff</color>
