--- a/app/src/main/res/layout/fragment_user_dictionary.xml
+++ b/app/src/main/res/layout/fragment_user_dictionary.xml
@@ -2,8 +2,11 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/secondary_light"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@color/gray_200"
+    android:orientation="vertical">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.appcompat.widget.LinearLayoutCompat>
