--- a/app/src/main/res/menu/menu_user_dictionary.xml
+++ b/app/src/main/res/menu/menu_user_dictionary.xml
@@ -1,5 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:iconTint="@color/white"
+        android:title="@string/search_hint"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="collapseActionView|always" />
     <item
         android:id="@+id/nav_add_dictionary"
         android:icon="@drawable/ic_baseline_add_24"
