--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.EasyDictionary" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
+        <!-- Primary brand color -->
         <item name="colorPrimary">@color/main</item>
         <item name="colorPrimaryVariant">@color/main_dark</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSurface">@color/main_dark</item>
-        <!-- Secondary brand color. -->
+        <!-- Secondary brand color -->
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorSecondaryVariant">@color/secondary_dark</item>
         <item name="colorOnSecondary">@color/white</item>
-        <!-- Status bar color. -->
+        <!-- Status bar color -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="colorControlNormal">@color/white</item>
-        <!-- Customize your theme here. -->
+        <!-- Customize theme -->
         <item name="android:textColorPrimary">@color/white</item>
         <item name="textAppearanceLabelLarge">@style/TextAppearance.Material3.LabelLarge</item>
         <item name="textAppearanceBodySmall">@style/TextAppearance.Material3.BodySmall</item>
@@ -22,7 +22,12 @@
         <item name="textAppearanceTitleMedium">@style/TextAppearance.Material3.TitleMedium</item>
         <item name="shapeAppearanceCornerExtraSmall">@style/ShapeAppearance.Material3.Corner.ExtraSmall</item>
         <item name="editTextStyle">@style/Widget.TextInputEditText.OutlinedBox</item>
-        <!-- Snackbar. -->
+        <!-- Toolbar -->
+        <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeStyle">@style/Widget.App.ActionMode</item>
+        <item name="actionModeCloseDrawable">@drawable/ic_baseline_close_24</item>
+        <item name="actionBarTheme">@style/ThemeOverlay.MaterialComponents.Dark.ActionBar</item>
+        <!-- Snackbar -->
         <item name="snackbarStyle">@style/Widget.App.Snackbar</item>
         <item name="snackbarButtonStyle">@style/Widget.App.SnackbarButton</item>
     </style>
@@ -84,5 +89,11 @@
     <style name="ThemeOverlay.App.Snackbar" parent="">
         <item name="colorPrimary">@color/main_dark</item>
         <item name="colorOnSurface">@color/black</item>
+    </style>
+
+    <style name="Widget.App.ActionMode" parent="Widget.AppCompat.ActionMode">
+        <item name="titleTextStyle">?attr/textAppearanceHeadline6</item>
+        <item name="subtitleTextStyle">?attr/textAppearanceSubtitle1</item>
+        <item name="background">@color/gray_500</item>
     </style>
 </resources>
