--- a/app/src/main/res/layout/fragment_add_new_word.xml
+++ b/app/src/main/res/layout/fragment_add_new_word.xml
@@ -27,6 +27,7 @@
                     style="@style/Widget.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:errorEnabled="true"
                     android:layout_margin="9dp"
                     android:textColorHint="@color/gray_500">
 
