--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,5 +10,10 @@
             android:icon="@drawable/ic_dictionary"
             android:iconTint="@color/main"
             android:title="@string/my_dictionaries" />
+        <item
+            android:id="@+id/nav_quize"
+            android:icon="@drawable/ic_quize"
+            android:iconTint="@color/main"
+            android:title="@string/quiz" />
     </group>
 </menu>
