--- a/app/src/main/res/navigation/nav_main_graph.xml
+++ b/app/src/main/res/navigation/nav_main_graph.xml
@@ -131,5 +131,18 @@
             android:name="my.dictionary.free.view.quiz.detail.QuizDetailFragment.BUNDLE_QUIZ_ID"
             android:defaultValue="null"
             app:argType="string" />
+        <action
+            android:id="@+id/action_quizDetailFragment_to_runQuizFragment"
+            app:destination="@id/runQuizFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/runQuizFragment"
+        android:name="my.dictionary.free.view.quiz.run.RunQuizFragment"
+        android:label="RunQuizFragment"
+        tools:layout="@layout/fragment_run_quiz">
+        <argument
+            android:name="my.dictionary.free.view.quiz.run.RunQuizFragment.BUNDLE_QUIZ_ID"
+            android:defaultValue="null"
+            app:argType="string" />
     </fragment>
 </navigation>
