--- a/app/src/main/res/layout/item_translation_variant.xml
+++ b/app/src/main/res/layout/item_translation_variant.xml
@@ -7,42 +7,86 @@
     android:layout_marginTop="1dp"
     android:background="@color/white"
     android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="horizontal">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="9dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/green_a_700"
+                android:textSize="16dp"
+                android:textStyle="italic"
+                tools:text="Military" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/translated_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:textColor="@color/main_text"
+                android:textSize="16dp"
+                tools:text="- Майбутнє..." />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/category"
+            android:id="@+id/translated_example"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="9dp"
             android:gravity="center_vertical"
-            android:layout_marginRight="9dp"
-            android:textColor="@color/green_a_700"
+            android:textColor="@color/secondary_text"
             android:textSize="16dp"
-            android:textStyle="italic"
-            tools:text="Military" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/translated_word"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:textColor="@color/main_text"
-            android:textSize="16dp"
-            tools:text="- Майбутнє..." />
+            tools:text="Використовується що до майбутнього" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/translated_example"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:layout_marginTop="9dp"
-        android:textColor="@color/secondary_text"
-        android:textSize="16dp"
-        tools:text="Використовується що до майбутнього" />
+        android:orientation="horizontal">
+
+        <FrameLayout
+            android:id="@+id/edit"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="16dp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_baseline_mode_edit_24"
+                android:tint="@color/main_dark" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="16dp">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_baseline_delete_24"
+                android:tint="@color/red" />
+        </FrameLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.appcompat.widget.LinearLayoutCompat>
