--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="yellow_500">#FFEB3B</color>
     <color name="green_a_400">#00E676</color>
     <color name="green_a_700">#00C853</color>
+    <color name="red">#E51400</color>
 
     <color name="main">#2196f3</color>
     <color name="main_light">#6ec5ff</color>
