--- a/app/src/main/res/menu/menu_words_choose.xml
+++ b/app/src/main/res/menu/menu_words_choose.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/nav_select_all"
+        android:icon="@drawable/ic_baseline_done_all_24"
+        android:iconTint="@color/white"
+        android:title="@string/add"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/nav_add_word"
         android:icon="@drawable/ic_baseline_save_24"
         android:iconTint="@color/white"
