--- a/app/src/main/res/layout/fragment_add_new_word.xml
+++ b/app/src/main/res/layout/fragment_add_new_word.xml
@@ -27,9 +27,9 @@
                     style="@style/Widget.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:errorEnabled="true"
                     android:layout_margin="9dp"
-                    android:textColorHint="@color/gray_500">
+                    android:textColorHint="@color/gray_500"
+                    app:errorEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_text_word"
@@ -73,10 +73,30 @@
                         android:textSize="12dp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="9dp"
+                    android:layout_marginTop="9dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/word_type"
+                    android:textColor="@color/main_text"
+                    android:textSize="12dp" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/choose_word_type"
+                    style="@style/Widget.App.Spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="9dp"
+                    android:spinnerMode="dropdown"
+                    tools:listitem="@layout/item_spinner_single" />
+
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/add_variants_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
                     android:orientation="horizontal"
                     android:padding="9dp">
 
@@ -108,8 +128,8 @@
         <my.dictionary.free.view.widget.phonetic.PhoneticsView
             android:id="@+id/phonetic_view"
             android:layout_width="match_parent"
-            android:visibility="gone"
             android:layout_height="400dp"
-            android:layout_gravity="bottom" />
+            android:layout_gravity="bottom"
+            android:visibility="gone" />
     </FrameLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
