added ability to select words by category when create a quiz

--- a/app/src/main/res/layout/fragment_add_new_translation_variant.xml
+++ b/app/src/main/res/layout/fragment_add_new_translation_variant.xml
@@ -90,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_weight="1"
-                    android:text="@string/choose_category"
+                    android:text="@string/choose_category_optional"
                     android:textColor="@color/main_text"
                     android:textSize="16dp" />
 
